--- a/Assignment-4/index.html
+++ b/Assignment-4/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3</title>
+    <title>Assignment 4</title>
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="css/lib/slate.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bg-primary">
@@ -16,10 +15,12 @@
         <p>Phone: (931) 308-1919</p>
         <p>Address: 932 Franklin Heights Drive, Winchester, TN 37398</p>
         <p>Assignment: Clement Hall</p>
-        <button type="button" id="btnTest" class="btn btn-warning mb-3">Edit Profile</button>
+        <input id="txtPayRate">
+        <input id="txtHours">
+        <button type="button" id="btnTest" class="btn btn-warning mb-3">Calculate</button>
     </div>
     <script src="js/lib/jquery-3.6.0.min.js"></script>
     <script src="js/lib/bootstrap.bundle.min.js"></script>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
