--- a/PigPen/index.html
+++ b/PigPen/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="67924202036-9bc35i97h6o0hl5vvls1okgvof3mq8hs.apps.googleusercontent.com.apps.googleusercontent.com">
     <title>Login</title>
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/lib/yeti.min.css">
@@ -22,11 +23,19 @@
                     <input type="password" class="form-control" id="txtPassword" placeholder="MyReallyAwesomePassword">
                 </div>
                 <button type="button" class="btn btn-primary btn-block mb-3">Login</button>
+                <h3 class="text-center">- OR -</h3>
+                <button type="button" id="btnLoginGoogle" class="btn btn-secondary btn-block mb-3">Login With Google</button>
             </form>
+
+
         </div>
     </div>
+
+
+
     <script src="js/lib/jquery-3.6.0.min.js"></script>
     <script src="js/lib/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 </html>
