--- a/BuildingUIwithJS-assignment/index.html
+++ b/BuildingUIwithJS-assignment/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en"></html>
 <head>
@@ -9,16 +8,27 @@
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/lib/yeti.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.11.2/datatables.min.css"/>
 </head>
 <body class="bg-primary">
     <div class="wrapper">
         <div id="divEmployeeCards" class="row col-12">
 
         </div>
+        <div class="card col-6 offset-3 mt-5">
+            <table class="table" id="tblEmployess">
+                <thead><th>First Name</th><th>Last Name</th></thead>
+                <tbody>
+
+                </tbody>
+            </table>
+        </div>
+
     </div>
     <script src="js/lib/jquery-3.6.0.min.js"></script>
     <script src="js/lib/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.11.2/datatables.min.js"></script>
 </body>
 </html>
